fixed visual bug that squished the sidebar links while the sidebar was opening

--- a/community_garden/static/css/base.css
+++ b/community_garden/static/css/base.css
@@ -82,7 +82,6 @@ nav a.active {
     cursor: pointer;
     padding: 10px;
 }
-
 .hamburger div {
     width: 25px;
     height: 3px;
@@ -90,7 +89,6 @@ nav a.active {
     border-radius: 10px;
     margin: 4px 0;
 }
-
 /* Sidebar */
 .sidebar {
     height: 100%;
@@ -104,7 +102,9 @@ nav a.active {
     padding-top: 60px;
     z-index: 1000;
 }
-
+.sidebar.open {
+    width: 250px; /* Set a fixed width when the sidebar is open */
+}
 .sidebar a {
     padding: 10px 15px;
     text-decoration: none;
@@ -112,6 +112,7 @@ nav a.active {
     color: #333;
     display: block;
     transition: 0.3s;
+    white-space: nowrap; /* Prevent text from wrapping */
 }
 
 .sidebar a:hover {
